--- a/charts/civicrm/v1.0.5/Chart.yaml
+++ b/charts/civicrm/v1.0.5/Chart.yaml
@@ -1,4 +1,4 @@
-name: wordpress
+name: civicrm
 version: 1.0.5
 appVersion: 4.9.5
 description: Build, engage, and organize your constituents Get the powerful open source CRM used by more than 10,000 non-profits.
